Enable Android build

--- a/Skip.env
+++ b/Skip.env
@@ -17,4 +17,4 @@ MARKETING_VERSION = 0.0.1
 CURRENT_PROJECT_VERSION = 1
 
 // The package name for the Android entry point, referenced by the AndroidManifest.xml
-ANDROID_PACKAGE_NAME = module.landmarks
+ANDROID_PACKAGE_NAME = landmarks.module
